test_scores/negative_dimers/features/P20042.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P20042.pkl.xz